# P2P_Network_Overlay_using_Poco_C-

./: CMakeLists.txt  README.md
docs/: design_notes.md
include/: Node.hpp
src/: Node.cpp  main.cpp  main_client.cpp  main_server.cpp
